# docs/swagger.json
@@ -7,40 +7,6 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
-			"KnightResponse": {
-				"properties": {
-					"name": {
-						"type": "string"
-					},
-					"armor": {
-						"type": "string"
-					},
-					"rank": {
-						"type": "string",
-						"enum": [
-							"Bronze",
-							"Silver",
-							"Gold"
-						]
-					},
-					"power": {
-						"type": "number",
-						"format": "double"
-					},
-					"img": {
-						"type": "string",
-						"nullable": true
-					}
-				},
-				"required": [
-					"name",
-					"armor",
-					"rank",
-					"power"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
 			"HxHCharacterResponse": {
 				"properties": {
 					"id": {
@@ -140,106 +106,6 @@
 		"description": "API para gestión de caballeros - Documentación automática con TypeScript"
 	},
 	"paths": {
-		"/api/knights": {
-			"get": {
-				"operationId": "GetAll",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"items": {
-										"$ref": "#/components/schemas/KnightResponse"
-									},
-									"type": "array"
-								}
-							}
-						}
-					}
-				},
-				"security": [],
-				"parameters": []
-			}
-		},
-		"/api/knights/search/name": {
-			"get": {
-				"operationId": "SearchByName",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"items": {
-										"$ref": "#/components/schemas/KnightResponse"
-									},
-									"type": "array"
-								}
-							}
-						}
-					}
-				},
-				"security": [],
-				"parameters": [
-					{
-						"in": "query",
-						"name": "name",
-						"required": true,
-						"schema": {
-							"type": "string"
-						}
-					}
-				]
-			}
-		},
-		"/api/knights/search": {
-			"get": {
-				"operationId": "Search",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"items": {
-										"$ref": "#/components/schemas/KnightResponse"
-									},
-									"type": "array"
-								}
-							}
-						}
-					}
-				},
-				"security": [],
-				"parameters": [
-					{
-						"in": "query",
-						"name": "name",
-						"required": false,
-						"schema": {
-							"type": "string"
-						}
-					},
-					{
-						"in": "query",
-						"name": "armor",
-						"required": false,
-						"schema": {
-							"type": "string"
-						}
-					},
-					{
-						"in": "query",
-						"name": "rank",
-						"required": false,
-						"schema": {
-							"type": "string"
-						}
-					}
-				]
-			}
-		},
 		"/api/hxh-characters": {
 			"get": {
 				"operationId": "SearchCharacters",
