# src/generated/routes.ts
@@ -4,8 +4,6 @@
 import type { TsoaRoute } from '@tsoa/runtime';
 import {  fetchMiddlewares, ExpressTemplateService } from '@tsoa/runtime';
 // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-import { KnightController } from './../controllers/knightController';
-// WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
 import { HxHCharacterController } from './../controllers/HxHCharacterController';
 import type { Request as ExRequest, Response as ExResponse, RequestHandler, Router } from 'express';
 
@@ -14,18 +12,6 @@ import type { Request as ExRequest, Response as ExResponse, RequestHandler, Rout
 // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
 
 const models: TsoaRoute.Models = {
-    "KnightResponse": {
-        "dataType": "refObject",
-        "properties": {
-            "name": {"dataType":"string","required":true},
-            "armor": {"dataType":"string","required":true},
-            "rank": {"dataType":"union","subSchemas":[{"dataType":"enum","enums":["Bronze"]},{"dataType":"enum","enums":["Silver"]},{"dataType":"enum","enums":["Gold"]}],"required":true},
-            "power": {"dataType":"double","required":true},
-            "img": {"dataType":"union","subSchemas":[{"dataType":"string"},{"dataType":"enum","enums":[null]}]},
-        },
-        "additionalProperties": false,
-    },
-    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
     "HxHCharacterResponse": {
         "dataType": "refObject",
         "properties": {
@@ -80,97 +66,6 @@ export function RegisterRoutes(app: Router) {
 
 
     
-        const argsKnightController_getAll: Record<string, TsoaRoute.ParameterSchema> = {
-        };
-        app.get('/api/knights',
-            ...(fetchMiddlewares<RequestHandler>(KnightController)),
-            ...(fetchMiddlewares<RequestHandler>(KnightController.prototype.getAll)),
-
-            async function KnightController_getAll(request: ExRequest, response: ExResponse, next: any) {
-
-            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-
-            let validatedArgs: any[] = [];
-            try {
-                validatedArgs = templateService.getValidatedArgs({ args: argsKnightController_getAll, request, response });
-
-                const controller = new KnightController();
-
-              await templateService.apiHandler({
-                methodName: 'getAll',
-                controller,
-                response,
-                next,
-                validatedArgs,
-                successStatus: undefined,
-              });
-            } catch (err) {
-                return next(err);
-            }
-        });
-        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-        const argsKnightController_searchByName: Record<string, TsoaRoute.ParameterSchema> = {
-                name: {"in":"query","name":"name","required":true,"dataType":"string"},
-        };
-        app.get('/api/knights/search/name',
-            ...(fetchMiddlewares<RequestHandler>(KnightController)),
-            ...(fetchMiddlewares<RequestHandler>(KnightController.prototype.searchByName)),
-
-            async function KnightController_searchByName(request: ExRequest, response: ExResponse, next: any) {
-
-            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-
-            let validatedArgs: any[] = [];
-            try {
-                validatedArgs = templateService.getValidatedArgs({ args: argsKnightController_searchByName, request, response });
-
-                const controller = new KnightController();
-
-              await templateService.apiHandler({
-                methodName: 'searchByName',
-                controller,
-                response,
-                next,
-                validatedArgs,
-                successStatus: undefined,
-              });
-            } catch (err) {
-                return next(err);
-            }
-        });
-        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-        const argsKnightController_search: Record<string, TsoaRoute.ParameterSchema> = {
-                name: {"in":"query","name":"name","dataType":"string"},
-                armor: {"in":"query","name":"armor","dataType":"string"},
-                rank: {"in":"query","name":"rank","dataType":"string"},
-        };
-        app.get('/api/knights/search',
-            ...(fetchMiddlewares<RequestHandler>(KnightController)),
-            ...(fetchMiddlewares<RequestHandler>(KnightController.prototype.search)),
-
-            async function KnightController_search(request: ExRequest, response: ExResponse, next: any) {
-
-            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-
-            let validatedArgs: any[] = [];
-            try {
-                validatedArgs = templateService.getValidatedArgs({ args: argsKnightController_search, request, response });
-
-                const controller = new KnightController();
-
-              await templateService.apiHandler({
-                methodName: 'search',
-                controller,
-                response,
-                next,
-                validatedArgs,
-                successStatus: undefined,
-              });
-            } catch (err) {
-                return next(err);
-            }
-        });
-        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
         const argsHxHCharacterController_searchCharacters: Record<string, TsoaRoute.ParameterSchema> = {
                 name: {"in":"query","name":"name","dataType":"string"},
                 age: {"in":"query","name":"age","dataType":"double"},
